set data in redux and set all the components as well as pages

--- a/src/component/CheckoutCard/CheckoutCard.scss
+++ b/src/component/CheckoutCard/CheckoutCard.scss
@@ -13,3 +13,13 @@
     
     justify-items: center;
 }
+.quantity{
+    display: flex;
+    text-align: center;
+}
+.arrow{
+    margin: 0 10px;
+    font-weight: bolder;
+    cursor: pointer;
+    outline: none;
+}
