--- a/src/Pages/Header/Header.scss
+++ b/src/Pages/Header/Header.scss
@@ -16,7 +16,7 @@
 
 .links{
     display: flex;
-    width: 70%;
+    width: 80%;
     justify-content: flex-end;
     font-size: 1.2em;
     font-weight: 600;
@@ -24,12 +24,16 @@
   align-items: center; 
 }
  .option {
-     margin-right: 30px;
+     margin: 0 15px;
      cursor: pointer;
 
  }
  
  .sign-in{
+     margin-right: 20px;
     display: flex;
+    align-items: center;
+ 
+
 }
 }
