--- a/src/component/CollectionItems/CollectionItems.scss
+++ b/src/component/CollectionItems/CollectionItems.scss
@@ -1,18 +1,18 @@
 .collection-item {
-    width: 270px;
+    width: 39vh;
     display: flex;
     flex-direction: column;
     height: 350px;
     align-items: center;
     position: relative;
-    margin-bottom: 25px;
+    margin-bottom: 30px;
   
     .image {
       width: 100%;
       height: 95%;
       background-size: cover;
       background-position: center;
-      margin-bottom: 5px;
+      margin-bottom: 3px;
     }
     
   
@@ -23,7 +23,7 @@
       justify-content: space-between;
       align-items: center;
       font-size: 18px;
-     
+      margin-bottom: 15px;
   
       .name {
         width: 90%;
