--- a/src/component/cart-dropdown/CartItemCard.scss
+++ b/src/component/cart-dropdown/CartItemCard.scss
@@ -6,11 +6,12 @@
     margin-top: 10px;
     height: 81px;
     background-color: rgb(210, 219, 224);
+    align-items: center;
     .content { 
         display: flex;
         flex-direction: column;
         width: 60%;
-        padding: 15px 0 0 7px;
+        padding: 0 0 0 7px;
 
       .content-info{
             display: flex;
