stripe payment added

--- a/src/Pages/Payment/ProceedPayment.scss
+++ b/src/Pages/Payment/ProceedPayment.scss
@@ -25,3 +25,10 @@
     font-weight: bolder;
     font-size: 1.5em;
 }
+.testing{
+    color: red;
+    text-align: center;
+    margin : 100px auto ;
+    font-size: 1.2em;
+    font-weight: 600;
+}
