--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,12 @@
 body{
     font-family: 'Open Sans Condensed';
     padding: 20px 20px;
-    
+    .snackbar{
+        text-align: center;
+        font-weight: bolder;
+        font-size: 24px;
+        
+    }
 }
 .body-text{
     font-family: 'Open Sans Condensed';
