--- a/src/Pages/Header/Header.scss
+++ b/src/Pages/Header/Header.scss
@@ -1,17 +1,59 @@
 .header-body{
-    width: 98.3%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 0 20px;
+    padding: 5px 36px 0 30px;
     margin-bottom: 15px;
-    height: 70px;
- 
+    height: 65px;
+    background-color: rgb(245, 242, 242);
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    box-shadow: rgb(167, 165, 165) 1px 1px 2px 2px;
 .crown-logo{
         margin-left: 15px;
         height: 100%;
         width: 70px;
-        margin-top: 4px;
+        margin-top: 10px;
         
+}
+.display-name-image{
+    display: flex;
+    align-items: center;
+    background-color: rgb(218, 217, 217);
+    border-radius: 4px;
+    width: fit-content;
+    min-width: 100px;
+    margin: 0;
+    padding: 0;
+    border-right: 1px solid rgb(160, 158, 158);
+    box-shadow: rgb(133, 132, 132) 1px 1px;
+    .display-image{
+      margin: 0 4px 0 0px;
+      padding: 3px 4px;
+      background-color:   rgb(185, 185, 185);
+      display: flex;
+      align-items: center;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+
+    }
+  
+    img{
+        
+        background-color: rgb(95, 94, 94);
+       
+       
+    }
+    .custom-style{
+       
+        .text{
+            margin: 10px 0 ;
+            padding: 0 0 0 0;
+            
+        }
+    }
+
+   
 }
 
 .links{
@@ -24,9 +66,17 @@
   align-items: center; 
 }
  .option {
-     margin: 0 15px;
+     margin: 0 10px;
      cursor: pointer;
-
+     color: rgb(82, 79, 79);
+     background-color: rgb(218, 217, 217);
+     height: 33px;
+     text-align: center;
+     border-radius: 2px;
+     display: flex;
+     align-items: center;
+     padding: 0 5px;
+     box-shadow: rgb(161, 161, 161) 2px 1px;
  }
  
  .sign-in{
