--- a/src/Pages/ProductLandingPage/LandingPage.scss
+++ b/src/Pages/ProductLandingPage/LandingPage.scss
@@ -1,18 +1,130 @@
+.landing-Page{
+    width: 80%;
+    margin: 0 auto;
+}
+    .bread-crumb{
+        display: flex;
+        font-size: 1em;
+        border-radius: 4px;
+        background-color: rgb(221, 220, 220);
+        margin: 10px 20px 30px 0px;
+        padding: 5px;
+        width: fit-content;
+        
+       
+        & h2{
+            background-color: rgba(207, 206, 206, 0.917);
+            color: rgb(85, 83, 83);
+            padding: 4px 15px;
+            margin: 0px 3px;
+            font-size: 1.3em;
+            border-radius: 3px;
+            box-shadow: rgb(170, 170, 170) 2px 2px 1px 1px;
+            cursor: pointer;
+            &:hover{
+                background-color: rgba(160, 157, 157, 0.876); 
+                color: rgb(24, 24, 24);
+
+            }
+        }
+    }
+
 .data-info{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    background-color: rgba(204, 204, 204, 0.822);
+    border-radius: 6px;
+    padding: 20px;
+    
+    box-shadow: rgb(190, 190, 190) 2px 2px 4px 4px;
+    & img{
+        border-radius: 6px;
+        box-shadow: rgb(134, 134, 134) 2px 2px 3px 3px;
+       
+
+    }
     .content{
-        width: 60%;
+        width: 76%;
         display: flex;
         flex-direction: column;
+        background-color: rgb(197, 195, 195);
+        border-radius: 8px;
+        padding :30px;
+        
     
     .information{
         display: flex;
         justify-content: space-around;
+        flex-direction: column;
+        justify-content: space-around;
+        
+        height: 96%;
+        padding-top: 10px;
+        & h2{
+            border-radius: 6px;
+        width: fit-content;
+        padding: 4px 11px;
+        background-color: rgb(170, 168, 168);
+        box-shadow: rgb(102, 101, 101) 1px 1px 3px 3px;
+        }
+    }
+    .price-qty{
+        display: flex;
+        padding: 0;
+        align-items: center;
+        width: 30%;
+        height: 70px;
+        justify-content: space-between;
+        
+        & p{
+            font-weight: bolder;
+            font-size: 1.5em;
+            margin: auto 0;
+            background-color: rgb(155, 153, 153);
+        box-shadow: rgb(102, 101, 101) 1px 1px 2px 2px;
+        border-radius: 6px;
+        padding: 0px 4px;
+        }
+
+    }
+    .qty{
+        
+        font-weight: bold;
+        font-size: 1.1em;
+        width: 130px;
+        display: flex;
+        justify-content: space-between;
+        cursor: pointer;
+        font-weight: bolder;
+            font-size: 1.5em;
+            align-items: center;
+            padding: 4px 15px;
+            background-color: rgb(155, 153, 153);
+        box-shadow: rgb(102, 101, 101) 1px 1px 2px 2px;
+        margin: 0;
+        border-radius: 6px;
+
     }
     .data-buttons{
         display: flex;
-        justify-content: space-around;
+        justify-content: flex-start;
+        height: 30%;
+       
+       
+        align-items: center;
+        .landing-page-buttons{
+            background-color: rgb(155, 153, 153);
+            color: black;
+            font-weight: bolder;
+            box-shadow: rgb(100, 100, 100) 1px 1px 2px 2px;
+            margin-right: 8px;
+            &:hover{
+                background-color: rgba(49, 49, 49, 0.849);
+                color: white;
+                
+            
+            }
+        }
     }
 
 }
