--- a/src/Pages/WishListPage/WishList.scss
+++ b/src/Pages/WishListPage/WishList.scss
@@ -1,15 +1,41 @@
 .wishlist{
-   margin: 0 auto ;
     
-    width: 90%;
-   
-    h1{
-        margin: 15px;
+   margin: 0 auto ;
+    border-radius: 7px;
+    width: 77%;
+    padding: 20px 10px;
+    background-color: rgb(201, 201, 201);
+    box-shadow: rgb(161, 161, 161) 2px 3px;
+    
+    h2{
+        background-color: rgb(226, 226, 226);
+        width: fit-content;
+        padding: 5px 11px;
+        margin: 25px 25px 25px 70px;
+        border-radius: 4px;
+        color: rgb(75, 74, 74);
+        box-shadow: rgb(161, 161, 161) 2px 2px 2px 2px;
     }
     .wishlist-items{
-       
-        border: black 1px solid;
-        margin: 10px
+        margin: 10px 10px 20px 10px
     }
     
+    .created-div{
+
+    .wishlist-buttons{
+        position: relative;
+        left: 84%;
+        background-color: rgb(165, 165, 165);
+                color: black;
+                font-weight: bolder;
+                box-shadow: rgb(100, 100, 100) 1px 1px 2px 2px;
+                margin-right: 8px;
+                &:hover{
+                    background-color: rgba(49, 49, 49, 0.849);
+                    color: white;
+                   
+                }
+        }
+    }
 }
+
