--- a/src/component/CollectionItems/CollectionItems.scss
+++ b/src/component/CollectionItems/CollectionItems.scss
@@ -1,18 +1,23 @@
 .collection-item {
-    width: 39vh;
+    min-width: 20vw;
+    width: 250px;
     display: flex;
     flex-direction: column;
-    height: 350px;
+    height: 390px;
     align-items: center;
     position: relative;
-    margin-bottom: 30px;
-  
+    margin:0 10px 10px 15px;
+   
     .image {
       width: 100%;
-      height: 95%;
+      height: 97%;
       background-size: cover;
       background-position: center;
       margin-bottom: 3px;
+      background-color: black;
+      border-top-right-radius: 6px;
+      border-top-left-radius: 6px;
+      box-shadow: rgb(168, 168, 168) 2px 1px 2px 2px;
     }
     
   
@@ -24,6 +29,11 @@
       align-items: center;
       font-size: 18px;
       margin-bottom: 15px;
+      padding: 3px;
+      border-bottom-right-radius: 6px;
+      border-bottom-left-radius: 6px;
+      background-color: rgb(224, 224, 224);
+      box-shadow: rgb(163, 163, 163) 2px 1px 2px 2px ;
   
       .name {
         width: 90%;
@@ -36,31 +46,69 @@
     }
     .wish-list{
       position : absolute;
-      top : 50%;
+      top : 64%;
+      right: 28%;
       display: none;
+     
  
     }
-    .custom-button{
+    .cart-button{
           position : absolute;
           top : 64%;
+          left: 28%;
           display: none;
+          cursor: pointer;
     }
 
+
     &:hover{
-      .custom-button{
+      .cart-button{
         display: block;
         opacity: 0.8;
+        width: 90px;
+        height: 34px;
+        background-color: rgba(0, 0, 0, 0.548);
+        color: blanchedalmond;
+        padding-top: 7px;
+        border-radius: 5px;
+        padding : 6px 10px;
+        display: flex;
+        justify-content: space-between;
+        font-weight: bolder;
+        font-size: 1.2em;
+        &:hover{
+         color : rgba(0, 0, 0, 0.959);
+       background-color: rgba(255, 254, 251, 0.726);
+       font-size: 1.2em;
+        }
       }
+
+
+
       .wish-list{
         display: block;
         opacity: 0.8;
+        width: 37px;
+        height: 32px;
+        color: rgb(175, 0, 0);
+        background-color: rgba(0, 0, 0, 0.616);
+        padding: 3px 0px 0 2px;
+        border-radius: 5px;
+        &:hover{
+         
+          background-color: rgba(218, 218, 218, 0.548);
+         }
       
+      }
+      .cart-wishlist{
+        display: flex;
       }
       .image{
         opacity: 0.8;
+ 
       }
       .collection-footer {
-        background-color: rgb(202, 202, 202);
+        background-color: rgb(206, 206, 206);
       }
     }
 
