--- a/src/component/CustomButton/CustomButton.scss
+++ b/src/component/CustomButton/CustomButton.scss
@@ -1,25 +1,30 @@
 .custom-button {
-    min-width: 165px;
+    min-width: 140px;
     width: fit-content;
-    height: 50px;
+    height: 32px;
     letter-spacing: 0.5px;
     line-height: 50px;
-    padding: 0;
+    padding: 0 0 0 0;
     font-size: 15px;
-    background-color: black;
-    color: white;
+    background-color: rgb(146, 146, 146);
+    color: rgb(0, 0, 0);
     text-transform: uppercase;
     font-family: 'Open Sans Condensed';
     font-weight: bolder;
     border: none;
     cursor: pointer;
-    margin: 0 5px;
+    // margin: 0 auto;
     outline: none;
-  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    padding: 0 7px;
+    box-shadow: rgb(161, 161, 161) 1px 1px 2px 2px;
     &:hover {
-      background-color: white;
-      color: black;
-      border: 1px solid black;
+      background-color: rgb(98, 98, 98);
+      color: rgb(255, 255, 255);
+     
     }
     &.google-signin{
         background-color: rgb(49, 128, 218);
