--- a/src/component/SignIn/SignIn.scss
+++ b/src/component/SignIn/SignIn.scss
@@ -34,10 +34,12 @@
     }
    
 }
-google-fb{
-    width: 300px;
+.google-fb{
+    width: 120px;
+    margin : 10px auto;
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
+    
     
     background-color: green($color: #000000);
 }
