--- a/src/component/cart-dropdown/CartItemCard.scss
+++ b/src/component/cart-dropdown/CartItemCard.scss
@@ -3,10 +3,11 @@
    justify-content: space-between;
     padding: 0;
     width: 100%;
-    margin-top: 10px;
+    margin: 10px 30px 0 0 ;
     height: 81px;
     background-color: rgb(210, 219, 224);
     align-items: center;
+    border-radius: 4px;
     .content { 
         display: flex;
         flex-direction: column;
