add the select and unselect all feature in cart and worked on signin modal

--- a/src/Pages/CheckOut/Checkout.scss
+++ b/src/Pages/CheckOut/Checkout.scss
@@ -50,6 +50,14 @@
         margin: 0;
         padding: 0;
     }
+    .select-unselect{
+        display: flex;
+        justify-content: center;
+        & input{
+            cursor: pointer;
+            margin: auto 7px;
+        }
+    }
 }
 }
 .cartItems{
