--- a/src/Pages/Payment/PaymentItems.scss
+++ b/src/Pages/Payment/PaymentItems.scss
@@ -5,10 +5,11 @@
    align-items: center;
     padding: 4px 0 4px 0;
     background-color: rgb(228, 228, 228);
-    margin: 10px 0;
     height: 110px;
     display: grid;
-    grid-template-columns: repeat(4 , 200px);
-    
+    grid-template-columns: repeat(4 , 23%);
+    box-shadow: rgb(200, 200, 200) 1px 1px 2px 2px;
+    border-radius: 4px;
+    margin: 0;
     justify-items: center;
 }
