--- a/src/component/CheckoutCard/CheckoutCard.scss
+++ b/src/component/CheckoutCard/CheckoutCard.scss
@@ -3,7 +3,7 @@
     display: flex;
    justify-content: space-between;
    align-items: center;
-    padding: 4px 0 4px 0;
+    padding: 0;
     background-color: rgb(228, 228, 228);
     box-shadow: rgb(161, 161, 161) 2px 2px 2px 2px;
     margin: 10px 0;
