--- a/src/component/SignIn/SignIn.scss
+++ b/src/component/SignIn/SignIn.scss
@@ -1,15 +1,33 @@
 .signin{
-    width: 400px;
+    width: 360px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    & h2{
-        margin-top: 30px;
+    justify-content: center;
+    color: rgb(85, 85, 85);
+    background-color: rgb(238, 235, 235);
+    padding: 2px 0px 0px 0px;
+   
+   
+    & h3{
+        width: 98%;
+        font-size: 1.3em;
+        margin: 0;
+        padding: 2px 6px 4px 6px;
+        background-color: rgb(224, 224, 224);
+        border-radius: 3px;
+        box-shadow: rgb(206, 206, 206) 1px 1px 2px 2px;
     }
-    & span{
-        font-size: 1.2em;
+    .signin-button{
+        width : 100%;
+        display: flex;
+        justify-content: center;
+        margin: 13px 0px 10px 0px;
     }
-    
+    .form-input-signin{
+        width: 90%;
+
+    }
 }
 .error{
     font-size: 14px;
@@ -18,8 +36,8 @@
     padding: 0 0;
     font-family : 'Amiri', serif;
     // font-family: calibri;
-    font-weight: 200;
-    font-style: italic;
+    font-weight: lighter;
+    // font-style: italic;
 }
 
 
